# linux-controller-mapper

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/backend/: config_manager.rs  controller_handler.rs  joysticks.rs  key_utils.rs  mod.rs
src/ui/: application.rs  key_press_frontend.rs  main_frontend.rs  mod.rs
src/ui/window/: base.rs  components.rs  error_window.rs  key_press_window.rs  main_window.rs  mod.rs  mouse_button_wrapper.rs  utils.rs
