[package]
name = "linux-controller-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
gilrs = { version = "0.11.*", features = ["serde-serialize"] }
enigo = { version = "0.6.*", features = ["serde"] }
iced = "0.13.*"
uuid = { version = "1.19.*", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
