[package]
name = "linux-controller-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.*"
directories = "6.0.*"
enigo = { version = "0.6.*", features = ["serde"] }
gilrs = { version = "0.11.*", features = ["serde-serialize"] }
iced = "0.13.*"
rfd = "0.17.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
